Test/bad/coverage/nonlinear_pats_nat.tt
import Data.Nat

data Bool : Type where
  False : Bool
  True  : Bool

eq : Nat -> Nat -> Bool
pat n =>
  eq n n = True
eq _ _ = False